# neovim-plugin-hello-haskell

./: .travis.yml  LICENSE  README.md  neovim-plugin-hello-haskell.cabal  plugin.sh  stack.yaml
app/: Main.hs
plugin/: neovim-plugin-hello-haskell.vim
src/: Hello.hs
src/Hello/: Plugin.hs
