name:                neovim-plugin-hello-haskell
version:             0.1.0
homepage:            https://github.com/satosystems/neovim-plugin-hello-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Satoshi Ogata
maintainer:          satosystems@gmail.com
copyright:           2017 Satoshi Ogata
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hello
                     , Hello.Plugin
  build-depends:       base >= 4.7 && < 5
                     , nvim-hs
  default-language:    Haskell2010

executable neovim-plugin-hello-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , neovim-plugin-hello-haskell
                     , nvim-hs
  default-language:    Haskell2010

test-suite neovim-plugin-hello-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , neovim-plugin-hello-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/satosystems/neovim-plugin-hello-haskell

